# ChangeLog for games-strategy/lostlabyrinth-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 May 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  lostlabyrinth-bin-2.9.0.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.
