@@ -1,3 +1,5 @@
 DIST lostlabyrinth_2.9.0.tar.gz 3930587 RMD160 d3f2c32d3713aa7570360cf1760699fde48807ec SHA1 0b831ed888fff8e8544ba247de03874ae988e277 SHA256 ba8610501b29f71d856fd25b54944af686edc305fbb2a97bca69aa314b63c8d7
+DIST lostlabyrinth_2.9.1.tar.gz 8294181 RMD160 4fb41f43bda7732fba359d05e011e878e5ba055c SHA1 3c95de3024b4f8ba7a9cd5efbf85f4659f0800cf SHA256 9962e3e8e2a02ba9e7d79132ed2c497b72a15cc13cf551c0bcdac1dd5075f0a8
 EBUILD lostlabyrinth-bin-2.9.0.ebuild 1605 RMD160 c35e73f4ab9745d9f7d1a25d0663bab658053a52 SHA1 bb71bea68094a1618f85b6cf761816642543c431 SHA256 d3c077a887a51346b8dc4ca01426893afc3fccc338b43864bd5569e651ff00f2
-MISC ChangeLog 294 RMD160 7d2997262d12a123915b4cd9f9b54ff39761f19a SHA1 7e02c8fb44a7578ca2daefd2e00dd38e691a8ba2 SHA256 f09b6ee09fa2e3147484b0e77d42d2623faf61a143b50c04a9557c049e52b2b5
+EBUILD lostlabyrinth-bin-2.9.1.ebuild 1647 RMD160 d05ae690f80ef98abbe1ec55217d3c702359ba81 SHA1 328d9639d63fa67fd61542c34433cff03823c44f SHA256 f8fc342cdc62fad751148094eb79f22c159685382987ff4f0a3e88449342e0d5
+MISC ChangeLog 394 RMD160 3c25d07d65b2aa7d69b8380a286338c1b87f2ed1 SHA1 3715e1ab5854c0e1f54684007824a8fa8b704ff2 SHA256 7f5ffe46a5a08d2c07a062841ee7fec0bb865e0cce8c2e8833780eaa1d1ed9c1
